force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_PARAM_VIEW__x/Forrester_SHIR_CASE_CRDR_PARAM_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_CRDR_PARAM_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_CRDR_PARAM_VIEW</externalName>
    <label>CRDR Parameter</label>
    <pluralLabel>CRDR Parameters</pluralLabel>
</CustomObject>