force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_PARAM_VIEW__x/fields/ADMIN_DEDUCT_PCT__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_DEDUCT_PCT__c</fullName>
    <description>ADMIN_DEDUCT_PCT</description>
    <externalDeveloperName>ADMIN_DEDUCT_PCT</externalDeveloperName>
    <label>Administrative Deduction %</label>
    <precision>11</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>