force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_PARAM_VIEW__x/fields/CASE_CRDR_PARAM_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_CRDR_PARAM_RECID__c</fullName>
    <description>CASE_CRDR_PARAM_RECID</description>
    <externalDeveloperName>CASE_CRDR_PARAM_RECID</externalDeveloperName>
    <label>CASE_CRDR_PARAM_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>