force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_PARAM_VIEW__x/fields/DISTRIB_PARAM_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>DISTRIB_PARAM_COMMENT__c</fullName>
    <description>DISTRIB_PARAM_COMMENT</description>
    <externalDeveloperName>DISTRIB_PARAM_COMMENT</externalDeveloperName>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>