force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_PARAM_VIEW__x/fields/FOR_PATENT_DEDUCT_PCT__c.field-meta.xml
<CustomField>
    <fullName>FOR_PATENT_DEDUCT_PCT__c</fullName>
    <description>FOR_PATENT_DEDUCT_PCT</description>
    <externalDeveloperName>FOR_PATENT_DEDUCT_PCT</externalDeveloperName>
    <label>Foreign Patent Deduction %</label>
    <precision>11</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>