force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_PARAM_VIEW__x/fields/MATTER_PATENT_DEDUCT_PCT__c.field-meta.xml
<CustomField>
    <fullName>MATTER_PATENT_DEDUCT_PCT__c</fullName>
    <description>MATTER_PATENT_DEDUCT_PCT</description>
    <externalDeveloperName>MATTER_PATENT_DEDUCT_PCT</externalDeveloperName>
    <label>Outside Matter Deduction %</label>
    <precision>11</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>